--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -498,10 +498,13 @@ jobs:
           retention-days: 7
 
   publish:
-    name: Publish GitHub Release
+    name: Publish GitHub Releases
     runs-on: ubuntu-latest
     needs: build
     if: startsWith(github.ref, 'refs/tags/v')
+    env:
+      UPDATER_RELEASE_REPO: ${{ vars.UPDATER_RELEASE_REPO }}
+      UPDATER_RELEASE_TAG_PREFIX: ${{ vars.UPDATER_RELEASE_TAG_PREFIX }}
 
     steps:
       - name: Checkout (manifest scripts)
@@ -524,14 +527,26 @@ jobs:
           find release-assets -type f -maxdepth 3 -print
           test -n "$(find release-assets -type f -maxdepth 3 -print -quit)"
 
+      - name: Resolve updater release target
+        shell: bash
+        run: |
+          set -euo pipefail
+          updater_repo="${UPDATER_RELEASE_REPO:-$GITHUB_REPOSITORY}"
+          updater_prefix="${UPDATER_RELEASE_TAG_PREFIX:-updater-}"
+          updater_tag="${updater_prefix}${GITHUB_REF_NAME}"
+          echo "UPDATER_REPO=$updater_repo" >> "$GITHUB_ENV"
+          echo "UPDATER_TAG=$updater_tag" >> "$GITHUB_ENV"
+          echo "Updater assets target: $updater_repo @ $updater_tag"
+
       - name: Generate latest.json updater manifest
         shell: bash
         run: |
           set -euo pipefail
           node scripts/generate-latest-json.mjs \
             --root release-assets \
-            --repo "$GITHUB_REPOSITORY" \
-            --tag "$GITHUB_REF_NAME" \
+            --repo "$UPDATER_REPO" \
+            --release-tag "$GITHUB_REF_NAME" \
+            --asset-tag "$UPDATER_TAG" \
             --out latest.json
 
       - name: Validate latest.json (structure + local asset mapping)
@@ -541,10 +556,24 @@ jobs:
           node scripts/validate-latest-json.mjs \
             --root release-assets \
             --file latest.json \
-            --tag "$GITHUB_REF_NAME" \
+            --asset-tag "$UPDATER_TAG" \
+            --expected-version "${GITHUB_REF_NAME#v}" \
             --require-platforms "darwin-aarch64,darwin-x86_64,windows-aarch64,windows-x86_64,linux-x86_64"
 
-      - name: Create/Update GitHub Release and upload assets
+      - name: Create/Update updater assets release
+        uses: softprops/action-gh-release@v2
+        with:
+          repository: ${{ env.UPDATER_REPO }}
+          tag_name: ${{ env.UPDATER_TAG }}
+          name: Updater assets ${{ github.ref_name }}
+          generate_release_notes: false
+          fail_on_unmatched_files: true
+          files: |
+            release-assets/**/openjar-launcher_*_updater.*
+        env:
+          GITHUB_TOKEN: ${{ secrets.UPDATER_RELEASE_TOKEN || secrets.GITHUB_TOKEN }}
+
+      - name: Create/Update user release and upload installers
         uses: softprops/action-gh-release@v2
         with:
           tag_name: ${{ github.ref_name }}
@@ -552,7 +581,6 @@ jobs:
           fail_on_unmatched_files: true
           files: |
             release-assets/**/OpenJar-Launcher_*_installer.*
-            release-assets/**/openjar-launcher_*_updater.*
             release-assets/latest.json
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -564,11 +592,12 @@ jobs:
           node scripts/validate-latest-json.mjs \
             --root release-assets \
             --file latest.json \
-            --tag "$GITHUB_REF_NAME" \
+            --asset-tag "$UPDATER_TAG" \
+            --expected-version "${GITHUB_REF_NAME#v}" \
             --require-platforms "darwin-aarch64,darwin-x86_64,windows-aarch64,windows-x86_64,linux-x86_64" \
             --check-urls \
             --auth-token "$GITHUB_TOKEN" \
             --retries 5 \
             --retry-delay-ms 2500
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.UPDATER_RELEASE_TOKEN || secrets.GITHUB_TOKEN }}
