--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -23,6 +23,8 @@ keyring = "3.6"
 zip = { version = "0.6.6", default-features = false, features = ["deflate"] }
 chrono = { version = "0.4", default-features = false, features = ["clock"] }
 tokio = { version = "1.49", features = ["macros", "time"] }
+hmac = "0.12"
+globset = "0.4"
 
 [features]
 custom-protocol = ["tauri/custom-protocol"]
